# e-agentscope-dumate

./: .gitignore  QUICK_START.md  README.md  start_all.bat  start_backend.bat  start_frontend.bat  test_conversation.py
agentscope-main/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING_zh.md  README.md  README_zh.md  pyproject.toml
agentscope-main/.gemini/: styleguide.md
agentscope-main/.github/: PULL_REQUEST_TEMPLATE.md
agentscope-main/.github/scripts/: update_news.py
agentscope-main/.github/workflows/: pr-title-check.yml  pre-commit.yml  publish-pypi.yml  stale.yml  toc.yml  unittest.yml  update_news.yml
agentscope-main/docs/: NEWS.md  NEWS_zh.md  roadmap.md
agentscope-main/examples/agent_service/: README.md  main.py
agentscope-main/examples/web_ui/: .gitignore  .prettierignore  .prettierrc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
agentscope-main/examples/web_ui/backend/: package.json  tsconfig.json
agentscope-main/examples/web_ui/frontend/: README.md  components.json  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
agentscope-main/scripts/model_examples/: README.md  _utils.py  anthropic_call.py  anthropic_multiagent.py  anthropic_multiagent_multimodal.py  anthropic_multimodal.py  dashscope_call.py  dashscope_multiagent.py  dashscope_multiagent_multimodal.py  dashscope_multimodal.py  deepseek_call.py  deepseek_multiagent.py  gemini_call.py  gemini_multiagent.py  gemini_multiagent_multimodal.py  gemini_multimodal.py  moonshot_call.py  moonshot_multiagent.py  moonshot_multiagent_multimodal.py  moonshot_multimodal.py  ollama_call.py  ollama_multiagent.py  ollama_multiagent_multimodal.py  ollama_multimodal.py  openai_chat_call.py  openai_chat_multiagent.py  openai_chat_multiagent_multimodal.py  openai_chat_multimodal.py  openai_response_call.py  openai_response_multiagent.py  openai_response_multiagent_multimodal.py  openai_response_multimodal.py  run_tests.py  xai_call.py  xai_multiagent.py  xai_multiagent_multimodal.py  xai_multimodal.py
agentscope-main/src/agentscope/: __init__.py  _version.py
agentscope-main/src/agentscope/_utils/: _common.py
agentscope-main/tests/: agent_basic_test.py  agui_protocol_test.py  builtin_bash_test.py  builtin_edit_test.py  builtin_file_cache_test.py  builtin_glob_test.py  builtin_grep_test.py  builtin_read_test.py  builtin_write_test.py  compress_context_test.py  compress_tool_result_test.py  event_test.py  event_to_message_test.py  formatter_anthropic_test.py  formatter_dashscope_test.py  formatter_deepseek_test.py  formatter_gemini_test.py  formatter_moonshot_test.py  formatter_ollama_test.py  formatter_openai_chat_test.py  formatter_openai_response_test.py  formatter_xai_test.py  hitl_external_execution_test.py  hitl_mixed_interrupt.py  hitl_user_confirmation_test.py  mcp_sse_client_test.py  mcp_streamable_http_client_test.py  message_test.py  middleware_test.py  model_anthropic_test.py  model_dashscope_test.py  model_deepseek_test.py  model_gemini_test.py  model_moonshot_test.py  model_ollama_test.py  model_openai_chat_test.py  model_openai_response_test.py  model_xai_test.py  permission_bash_parser_test.py  permission_engine_test.py  (+13 more)
(+382 files in other folders)
